make debugtools icons wrap to 2 lines. Prevents citizens UI's "close" button from being too close

--- a/ui/debug_dock/debug_dock.less
+++ b/ui/debug_dock/debug_dock.less
@@ -1,7 +1,8 @@
 .debugDock {
    position: absolute;
-   right: 150px;
+   right: 125px;
    top: 30px;
+   width: 180px;
 }
 
 .debugDockIcon {
